--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -1,45 +1,52 @@
-{# {% extends "../../index.twig" as app %}     #}
-
-<div class="modal fade" id="nav-tabRef">
+{% block app %}
+<div class="modal fade modal-lg" id="nav-tab-ref" tabindex="-1" aria-labelledby="navtabRefModalLabel" aria-hidden="true">
   {# Reference [4] #}
-  <div class="" id="nav-ref" role="tabpanel" aria-labelledby="nav-ref-tab">
-    <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
-      <div class="btn-group btn-group-sm" role="group">
-        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#refModal">
-          <i class="fa fa-plus-square"></i>
-          <span>{{ button_add }}</span>
-        </button>
-        <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="refEditModal()">
-          <i class="fa fa-edit"></i>
-          <span>{{ button_edit }}</span>
-        </button>
-        {# <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
-          <i class="fa fa-clone" aria-hidden="true"></i>
-          <span>{{ button_copy }}</span>
-        </button> #}
-         <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="refDelete()">
-          <i class="fa fa-minus-square"></i>
-          <span>{{ button_delete }}</span>
-        </button>
-        <button id="btn-config-save" type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="refUpdate()">
-            <i class="fa fa-floppy-o"></i>
-            <span>{{ button_save }}</span>
-        </button>       
+  <div class="modal-dialog">
+    <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="refModalLabel">Reference</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body tab-pane" id="nav-ref" role="tabpanel" aria-labelledby="nav-ref-tab">
+      <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
         <div class="btn-group btn-group-sm" role="group">
-          <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
-          <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">           
-            <li><a class="dropdown-item">{{ button_etc}}</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item">...</a></li>
-          </ul>
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#refModal">
+            <i class="fa fa-plus-square"></i>
+            <span>{{ button_add }}</span>
+          </button>
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="refEditModal()">
+            <i class="fa fa-edit"></i>
+            <span>{{ button_edit }}</span>
+          </button>
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center">
+            <i class="fa fa-clone" aria-hidden="true"></i>
+            <span>{{ button_copy }}</span>
+          </button>
+          <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="refDelete()">
+            <i class="fa fa-minus-square"></i>
+            <span>{{ button_delete }}</span>
+          </button>
+          {# <button id="btn-config-save" type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="refUpdate()">
+              <i class="fa fa-floppy-o"></i>
+              <span>{{ button_save }}</span>
+          </button>        #}
+          <div class="btn-group btn-group-sm" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
+            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">           
+              <li><a class="dropdown-item">{{ button_etc}}</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item">...</a></li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </div>           
-    <div class="eva-form"></div>      
-  </div> 
-</div>  
-{% block app %}  
-{# Modal Ref #}
+      </div>           
+      <div class="eva-form"></div>      
+    </div> 
+    </div>  
+  </div>  
+</div> 
+
+{# Modal Ref #}  
 <div class="modal fade" id="refModal" tabindex="-1" aria-labelledby="refModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -62,8 +69,7 @@
       </div>
     </div>
   </div>
-</div>
- {% endblock %}   
+</div> 
 {# Modal Object Edit #}
 <div class="modal fade" id="refEditModal" tabindex="-1" aria-labelledby="refEditModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -107,3 +113,4 @@
     </div>
   </div>
 </div>
+{% endblock %}
