--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -1,13 +1,14 @@
-{% block app %}
-<div class="modal fade modal-lg" id="nav-tab-ref" tabindex="-1" aria-labelledby="navtabRefModalLabel" aria-hidden="true">
+{# {% extends 'dashboard.twig' %} #}
+{% block ref %}    
+<div class="" id="nav-tab-ref" >
   {# Reference [4] #}
-  <div class="modal-dialog">
-    <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="refModalLabel">Reference</h5>
+  <div class="">
+    <div class="">
+    <div class="">
+      <h5 class="title" id="refModalLabel">Reference</h5>
       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
-    <div class="modal-body tab-pane" id="nav-ref" role="tabpanel" aria-labelledby="nav-ref-tab">
+    <div class="tab-pane" id="nav-ref" role="tabpanel" aria-labelledby="nav-ref-tab">
       <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
         <div class="btn-group btn-group-sm" role="group">
           <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#refModal">
@@ -45,7 +46,7 @@
     </div>  
   </div>  
 </div> 
-
+{% endblock %}
 {# Modal Ref #}  
 <div class="modal fade" id="refModal" tabindex="-1" aria-labelledby="refModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -113,4 +114,3 @@
     </div>
   </div>
 </div>
-{% endblock %}
