--- a/views/template/common/desktop.twig
+++ b/views/template/common/desktop.twig
@@ -1,6 +1,9 @@
 {% block desk %}    
     {# Desktop [4] #}
-    <div class="tab-pane fade active show" id="nav-desk" role="tabpanel" aria-labelledby="nav-desk-tab">
+    <div class="tab-pane active show" id="nav-desk" role="tabpanel" aria-labelledby="nav-desk-tab">
+      <div class="d-flex gap-1 align-items-center">
+        <h5 class="title" id="deskModalLabel">Desktop</h5>
+      </div>
     </div>
 </div>
 {% endblock %}
