--- a/views/template/common/desktop.twig
+++ b/views/template/common/desktop.twig
@@ -1,9 +1,9 @@
 {% block desk %}    
-    {# Desktop [4] #}
-    <div class="tab-pane active show" id="nav-desk" role="tabpanel" aria-labelledby="nav-desk-tab">
-      <div class="d-flex gap-1 align-items-center">
-        <h5 class="title" id="deskModalLabel">Desktop</h5>
-      </div>
+{# <div class="tab-content" id="nav-tab-desk" > #}
+    {# Desktop [1] #}
+    <div class="tab-pane fade active show" id="nav-Desktop" role="tabpanel" aria-labelledby="nav-desk-tab">
+        <h5 class="title" id="deskLabel">Desktop</h5> 
+        <hr/>
     </div>
-</div>
+ {# </div> #}
 {% endblock %}
