--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -68,7 +68,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="nav navbar-nav align-items-center gap-2" role="tablist">            
-            <ul class="nav navbar-nav" id="eva-nav">               
+            <ul class="nav navbar-nav" id="eva-nav" role="tablist">               
             </ul>   
             <li class="nav-item">
               <a class="nav-link d-flex gap-1 align-items-center" aria-current="page" href="#">
