--- a/views/index.twig
+++ b/views/index.twig
@@ -28,8 +28,8 @@
                         </div>                                                            
                     {% else %} {#Frontend#}                       
                         <noscript>You need to enable JavaScript to run this app.</noscript>                    
-                        <div class="eva fade" id="eva-app" data-app="">{#Start app#}</div>                                                             
-                            <div class="col tab-content p-3" style="height:calc(100vh - 96px); border: 1px solid #00ff92">                               
+                        <div class="eva" id="eva-app" data-app="">{#Start app#}</div>                                                             
+                            <div class="col tab-content p-2 eva-subsys" style="height:calc(100vh - 96px); border: 1px solid #00ff92">                               
                                 {% include "./template/common/desktop.twig" %}  
                                 {# <object style="">{{ block('desk') }}</object>                        #}
                                 {% include "./template/common/references.twig" %}  
