--- a/views/template/common/desktop.twig
+++ b/views/template/common/desktop.twig
@@ -5,5 +5,12 @@
         <h5 class="title" id="deskLabel">Desktop</h5> 
         <hr/>
     </div>
+    {# Store [1] #}
+    <div class="tab-pane fade" id="nav-Store" role="tabpanel" aria-labelledby="nav-store-tab">
+        <h5 class="title" id="deskLabel">Store</h5> 
+        <hr/>
+    </div>
+    {# Subsystems [3] #}
+    <div class="eva-subsys"></div>
  {# </div> #}
 {% endblock %}
