--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -1,8 +1,9 @@
 {% block ref %}    
-{# <div class="tab-content" id="nav-tab-content" > #}
+{# <div class="tab-content" id="nav-tab-cont" > #}
     {# Reference [2] #}
-    <div class="tab-pane fade" id="nav-References" role="tabpanel" aria-labelledby="nav-ref-tab">      
-      <h5 class="title" id="refLabel">Reference</h5>          
+    <div class="tab-pane fade" id="nav-ref-form" role="tabpanel" aria-labelledby="naf-Ref-tab">      
+      <h5 class="title" id="refFormLabel">Reference</h5>         
+      {# <hr/> #}
       <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
         <div class="btn-group btn-group-sm" role="group">
           <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" data-bs-toggle="modal" data-bs-target="#refModal">
@@ -96,6 +97,6 @@
         <button type="submit" class="btn btn-primary" onclick="objectEdit()">{{ button_save }}</button>
       </div>
     </div>
-  </div>
+  </div> 
 </div> #}
 {% endblock %}
