--- a/views/template/common/desktop.twig
+++ b/views/template/common/desktop.twig
@@ -5,11 +5,12 @@
         <h5 class="title" id="deskLabel">Desktop</h5> 
         <hr/>
     </div>
+    {# References [2] #}
     <div class="tab-pane fade" id="nav-References" role="tabpanel" aria-labelledby="nav-refs-tab">      
       <h5 class="title" id="refsLabel">References</h5>         
       <hr/>
     </div>  
-    {# Store [1] #}
+    {# Reports [3] #}
     <div class="tab-pane fade" id="nav-Reports" role="tabpanel" aria-labelledby="nav-rep-tab">
         <h5 class="title" id="repLabel">Reports</h5> 
         <hr/>
