--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -1,6 +1,6 @@
 {% block ref %}    
 {# <div class="tab-content" id="nav-tab-cont" > #}
-    {# Reference [2] #}
+    {# Reference [0] #}
     <div class="tab-pane fade" id="nav-ref-form" role="tabpanel" aria-labelledby="naf-Ref-tab">      
       <h5 class="title" id="refFormLabel">Reference</h5>         
       {# <hr/> #}
@@ -32,7 +32,7 @@
           </div>
         </div>
       </div>           
-      <div class="eva-form"></div>       
+      <div class="eva-ref-form"></div>       
     </div>  
 {# </div>  #}
 
