--- a/views/index.twig
+++ b/views/index.twig
@@ -30,7 +30,7 @@
                         <noscript>You need to enable JavaScript to run this app.</noscript>                    
                         <div class="eva" id="eva-app" data-app="">{#Start app#}</div>                                                             
                             <div class="col tab-content p-3 eva-subsys" style="height:calc(100vh - 95.5px); border: 1px solid #00ff92">                               
-                                {% include "./template/common/desktop.twig" %}  
+                                {# {% include "./template/common/desktop.twig" %}   #}
                                 {# <object style="">{{ block('desk') }}</object> #}
                                 {% include "./template/common/references.twig" %}  
                                 {# <object>{{ block('ref') }}</object> #}
